# gdsfactory

./: .buildinfo  CHANGELOG.html  CHANGELOG.md  README.html  README.md  api.html  cli.html  components-103.py  components.html  contribution.html  genindex.html  git.html  index.html  notebooks.html  objects.inv  plugins_circuits.html  plugins_fdtd.html  plugins_mesh.html  plugins_mode_solver.html  plugins_process.html  py-modindex.html  pyproject.toml  pytest.ini  routing.html  sdl.html  search.html  searchindex.js  workflow.html
_autosummary/: gdsfactory.Component.html  gdsfactory.ComponentReference.html  gdsfactory.cell.html  gdsfactory.cell_without_validator.html  gdsfactory.cross_section.CrossSection.html  gdsfactory.cross_section.Transition.html  gdsfactory.cross_section.cross_section.html  gdsfactory.cross_section.heater_metal.html  gdsfactory.cross_section.pin.html  gdsfactory.cross_section.pn.html  gdsfactory.cross_section.rib_heater_doped.html  gdsfactory.cross_section.rib_heater_doped_via_stack.html  gdsfactory.cross_section.strip.html  gdsfactory.cross_section.strip_auto_widen.html  gdsfactory.cross_section.strip_heater_doped.html  gdsfactory.cross_section.strip_heater_metal.html  gdsfactory.cross_section.strip_heater_metal_undercut.html  gdsfactory.geometry.write_drc.rule_area.html  gdsfactory.geometry.write_drc.rule_density.html  gdsfactory.geometry.write_drc.rule_enclosing.html  gdsfactory.geometry.write_drc.rule_min_width_or_space.html  gdsfactory.geometry.write_drc.rule_not_inside.html  gdsfactory.geometry.write_drc.rule_separation.html  gdsfactory.geometry.write_drc.rule_space.html  gdsfactory.geometry.write_drc.rule_width.html  gdsfactory.geometry.write_drc.write_drc_deck_macro.html  gdsfactory.get_netlist.get_netlist.html  gdsfactory.grid.html  gdsfactory.grid_with_text.html  gdsfactory.pack.html  gdsfactory.path.Path.html  gdsfactory.path.arc.html  gdsfactory.path.euler.html  gdsfactory.path.smooth.html  gdsfactory.path.spiral_archimedean.html  gdsfactory.path.straight.html  gdsfactory.path.transition.html  gdsfactory.read.from_dphox.html  gdsfactory.read.from_np.html  gdsfactory.read.from_phidl.html  (+68 more)
_modules/: index.html
_modules/gdsfactory/: cell.html  component.html  component_reference.html  cross_section.html  get_netlist.html  grid.html  pack.html  path.html
_modules/gdsfactory/components/: C.html  L.html  add_fiducials.html  add_grating_couplers.html  align.html  array_component.html  array_with_fanout.html  array_with_via.html  awg.html  bbox.html  bend_circular.html  bend_circular_heater.html  bend_euler.html  bend_port.html  bend_s.html  bezier.html  cavity.html  (+131 more)
_sources/_autosummary/: gdsfactory.ComponentReference.rst.txt
_static/: documentation_options.js
fixme/someday/: difftest.py
gdsfactory/: __init__.py  cli.py  component.py  config.py  cross_section.py  difftest.py  types.py
gdsfactory/database/: models.py
gdsfactory/geometry/: boolean.py  boolean_klayout.py
gdsfactory/kl/: boolean.py  component.py  component_layout.py  component_reference.py
gdsfactory/read/: from_yaml.py
gdsfactory/technology/: layer_views.py
gdsfactory/tests/: test_import_gds2.py
notebooks/: 00_geometry.html  00_geometry.ipynb  01_references.html  01_references.ipynb  02_movement.html  02_movement.ipynb  03_cells_autoname_and_cache.html  03_cells_autoname_and_cache.ipynb  03_layer_stack.html  03_layer_stack.ipynb  03_waveguides_paths_crossections.html  03_waveguides_paths_crossections.ipynb  041_routing_electrical.html  041_routing_electrical.ipynb  04_components_.html  04_components_.ipynb  04_components_hierarchy.html  04_components_hierarchy.ipynb  04_routing.html  04_routing.ipynb  07_mask.html  07_mask.ipynb  08_pdk.html  09_pdk_import.html  09_pdk_import.ipynb  10_yaml_component.html  10_yaml_component.ipynb  11_get_netlist.html  11_get_netlist.ipynb  20_schematic_driven_layout.html  20_schematic_driven_layout.ipynb  _1_git.html  _1_git.ipynb  _2_install.html  _2_klayout.html  _2_klayout.ipynb  _3_vscode.html  _4_gdsfactory_in_5minutes.html  _4_gdsfactory_in_5minutes.ipynb  common_mistakes.html  (+1 more)
notebooks/plugins/: materials.html  materials.ipynb  plugins.html
(+72 files in other folders)
