# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gdsfactory"
description = "python library to generate GDS layouts"
classifiers = [
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Operating System :: OS Independent",
]
version = "6.9.0"
authors = [ "gdsfactory community"]
keywords = ["eda", "photonics", "python"]
license = "LICENSE"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.8"
click = "^8.1.3"
flatdict = "^4.0.1"
gdstk = "^0.9.34"
jsondiff = "^2.0.0"
loguru = "^0.6.0"
numpy = "^1.23.5"
omegaconf = "^2.3.0"
orjson = "^3.8.3"
pandas = "^1.5.2"
pydantic = "^1.10.2"
pyyaml = "^6.0"
qrcode = "^7.3.1"
rectpack = "^0.2.2"
scipy = "^1.9.3"
shapely = "^2.0.0"
toolz = "^0.12.0"
tqdm = "^4.64.1"
watchdoc = "^0.0.1"
xmltodict = "^0.13.0"

[tool.poetry.extras]
full = [
	"klayout >= 0.27.11",
    "autograd",
    "bokeh",
    "flayout",
    "freetype-py",
    "holoviews",
    "ipympl",
    "ipywidgets",
    "klayout",
    "mapbox_earcut",
    "networkx",
    "nlopt",
    "pyglet<2",
    "pygmsh",
    "sax==0.8.6",
    "scikit-fem",
    "scikit-image",
    "scikit-learn",
    "simphony==0.6.1",
    "sqlalchemy",
    "sqlalchemy-utils",
    "triangle",
    "trimesh",
    ]
gmsh = [
    "gmsh",
    "h5py",
    "mapbox_earcut",
    "meshio",
    "pygmsh",
    "pyvista",
    "trimesh",
    "shapely"
    ]
sipann = ["SIPANN==2.0.0"]
tidy3d = ["tidy3d-beta==1.7.1"]
devsim = [
    "devsim",
    "mkl",
    "pyvista",
    "tidy3d-beta==1.7.1",
    ]
dev = [
    "autotyping",
    "black>=21",
    "doc8",
    "mypy",
    "pre-commit",
    "pylsp-mypy",
    "types-cachetools",
    "flake8",
    "flake8-bugbear",
    "ipykernel",
    "pytest",
    "pytest-cov",
    "pytest_regressions",
    "types-PyYAML",
    "xdoctest",
    "pyproject-flake8",
    ]
docs = [
    "autodoc_pydantic",
    "docutils==0.17.1",
    "matplotlib",
    "myst-parser",
    "nbsphinx",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-book-theme==0.3.3",
    "sphinx-click",
    "sphinx-copybutton",
    "sphinx-markdown-tables==0.0.16",
    "sphinxcontrib-video",
    ]

[tool.setuptools.packages]
find = {}

[tool.poetry.scripts]
gf = "gdsfactory.cli:cli"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''  # Specify the files/dirs that should be ignored by the black formatter
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | env
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["gdsfactory/"]
# addopts = --tb=no
addopts = '--tb=short'
python_files = ["gdsfactory/*.py","notebooks/*.ipynb"]
norecursedirs = ["gdsfactory/simulation", "extra/*.py", "gdsfactory/watch.py"]

[tool.flake8]
max-line-length = 88
max-complexity = 57
select = ["B","C","E","F","W","T4","B9"]
ignore = [ "E501", "E503", "E722", "W503", "W503", "E203", "B950", "B305", "B018", "B902", "B020", "B905"]
extend-ignore = "RST303"

exclude = [
    ".git",
    "__pycache__",
    "lib",
    "docs/source/conf.py",
    "build",
    "dist",
    ".ipynb_checkpoints",
    ".tox",
    "extra",
    "deprecated",
    "gdslib",
    ".mypy_cache",
    "venv",
    "devsim"
    ]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version",
]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true
skip = "gdsfactory/__init__.py"

[tool.setuptools.package-data]
mypkg = ["*.gds", "*.lym", "*.lyp", "*.lyt", "*.csv", "*.yaml"]

[tool.pydocstyle]
inherit = false
match = "(?!test).*\\.py"
add-ignore = ["D100","D101","D102","D103","D104","D203","D405","D417"]
convention = "google"
